[Add] Api Insert User

--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,7 @@
 MODE = "dev"
 APPLICATION_NAME = "gorm-${MODE}"
-DB_HOST = "203.154.71.142"
+DB_HOST = "127.0.0.1"
 DB_PORT = "3306"
-DB_USERNAME = "intern"
-DB_PASSWORD = "pLKkMTdX95PmVw6R2yYfsr"
-DB_NAME = "intern"
+DB_USERNAME = "root"
+DB_PASSWORD = "golfpativat719"
+DB_NAME = "shopping"
