[ADD] GENETATE JWT TOKEN

--- a/.env.dev
+++ b/.env.dev
@@ -5,3 +5,5 @@ DB_PORT = "3306"
 DB_USERNAME = "root"
 DB_PASSWORD = "golfpativat719"
 DB_NAME = "shopping"
+
+JWT_SECRET="wBf5qT9z@C#G&E)J-Md2PgU$dR@N*7L!"
